Fix: Java 19 -> Java 11 compilation error.